more easy fixes in 4.3-6

--- a/cooperations.tex
+++ b/cooperations.tex
@@ -547,7 +547,7 @@ B_j & = \beta_{(n-j)}^{-1} A_j.
 \end{align*}
 Noting that \(A_n = A\) and \(J_n = J\), we will inductively show that \(J_j\) is a regular ideal of \(A_j\).  The case \(j = 1\) is simple: \(J_1\) is a nonzero principal ideal in a ring without zerodivisors, so it must be regular.
 
-Assume the inductive result holds below some index \(j\).  In the quotient sequence \[0 \to \Susp^{|\beta_{(n-j)}|} A_j \xrightarrow{\beta_{(n-j)}} A_j \to A_{j-1} \to 0,\] the degree shift in the multiplication map (and induction on degree) shows that if \(J_{j-1}\) is regular on \(A_{j-1}\), then \(J_{j-1}\) is automatically regular on \(A_j\).  If we additionally prove that \(J_{j-1}\) is prime on \(A_j\) and that \(r_{n-j+1} \ne 0\) in the quotient, then \(A_j / J_{j-1}\) would be an integral domain, multiplication by \(r_{n-j+1}\) would be injective, and we would be done.  In the degree \(|r_{n-j+1}|\) of interest, there is an isomorphism \((A)_{|r_{n-j+1}|} \cong (A_j / J_{j-1})_{|r_{n-j+1}|}\), and hence \(r_{n-j+1} \ne 0\) as desired.
+Assume the inductive result holds below some index \(j\).  In the quotient sequence \[0 \to \Susp^{|\beta_{(n-j)}|} A_j \xrightarrow{\beta_{(n-j)}} A_j \to A_{j-1} \to 0,\] the degree shift in the multiplication map (and induction on degree) shows that if \(J_{j-1}\) is regular on \(A_{j-1}\), then \(J_{j-1}\) is automatically regular on \(A_j\).  If we additionally prove that \(J_{j-1}\) is prime in \(A_j\) and that \(r_{n-j+1} \ne 0\) in the quotient, then \(A_j / J_{j-1}\) would be an integral domain, multiplication by \(r_{n-j+1}\) would be injective, and we would be done.  In the degree \(|r_{n-j+1}|\) of interest, there is an isomorphism \((A)_{|r_{n-j+1}|} \cong (A_j / J_{j-1})_{|r_{n-j+1}|}\), and hence \(r_{n-j+1} \ne 0\) as desired.
 
 We thus turn to primality.  Note first that \(J_{j-1}\) is automatically prime in \(B_j\), since \(B_j\) is a polynomial \(\F_p[\beta_{(n-j)}^\pm]\)--algebra and each of the generators of \(J_{j-1}\) is one of these polynomial generators of \(B_j\).  Suppose for contradiction that \(J_{j-1}\) is not prime in \(A_j\), as witnessed by some elements \(x, y \not\in J_{j-1}\) satisfying \(xy \in J_{j-1}\).  Since \(J_{j-1}\) \emph{is} prime in \(B_j\), (by perhaps trading \(x\) and \(y\)) there is some minimum \(k > 0\) such that \[\beta_{(n-j)}^{\circ k} \circ x \in J_{j-1}.\]  We may as well assume \(k = 1\), which we can arrange by tucking the stray factors of \(\beta_{(n-j)}\) into \(x\).  Invoking the generators of \(J_{j-1}\), we thus have an equation \[\beta_{(n-j)} \circ x = \sum_{i = 1}^{j-1} a_i \circ r_{n-i+1}\] with \(a_i \in A_j\) not all divisible by \(\beta_{(n-j)}\).  In fact, by moving elements onto the left-hand side we can assume that if \(a_i \ne 0\) then \(a_i \not\in J_{i-1}\).  In \(A_{j-1}\), this equation becomes \[0 = \sum_{i=1}^{j-1} a_i \circ r_{n-i+1}\] with \(a_i\) not all in \(J_{i-1}\).  This is the desired contradiction, since \(J_{j-1}\) is regular in \(A_{j-1}\) by inductive hypothesis.
 \end{proof}
@@ -561,7 +561,7 @@ d_{i,j} & = \dim_{\F_p} \F_p[\<v_n\>, \beta_{(0)}]_{2i,2j}.
 Then \(c_{i,j} \le d_{i,j}\) and \(d_{i,j} = d_{i+2,j+2}\).
 \end{corollary}
 \begin{proof}
-We have seen that \(c_{i,j}\) is bounded by the \(\F_p\)--dimension of \[\left[\F_p[\<v_n\>, \beta_{(d)} \mid d \ge 0, n \ge 0] / (r_1, r_2, \ldots)\right]_{i,j}.\]  But, since this ideal is regular and \(|r_j| = |b_{(j)}|\), this is the same value as \(d_{i,j}\).  The other relation among the \(d_{i,j}\) follows from multiplication by \(\beta_{(0)}\), with \(|\beta_{(0)}| = (2, 2)\).
+We have seen that \(c_{i,j}\) is bounded by the \(\F_p\)--dimension of \[\left[\F_p[\<v_n\>, \beta_{(d)} \mid d \ge 0, n \ge 0] / (r_1, r_2, \ldots)\right]_{i,j}.\]  But, since this ideal is regular and \(|r_j| = |\beta_{(j)}|\), this is the same value as \(d_{i,j}\).  The other relation among the \(d_{i,j}\) follows from multiplication by \(\beta_{(0)}\), with \(|\beta_{(0)}| = (2, 2)\).
 \end{proof}
 
 We now turn to showing that this estimate is \emph{sharp} and that the secondary comparison map is \emph{onto}, and hence an isomorphism, using the bar spectral sequence.  Recalling that the bar spectral sequence converges to a the homology of the \emph{connective} delooping, let \(\OS{BP}{2*}'\) denote the connected component of \(\OS{BP}{2*}\) containing \([0_{2*}]\).  We will then demonstrate the following theorem inductively:
@@ -630,9 +630,9 @@ In particular, the spaces \(\OS{BP\<n\>}{k}\) in these bands \emph{are} independ
 
 \section{Dieudonn\'e modules}\label{SectionDieudonneModules}
 
-Our goal in this Lecture is to give a compact presentation of formal groups based on the following observation: the category of commutative cocommutative Hopf algebras of finite type over a ground field \(k\) forms an abelian category.  It follows abstractly that this category admits a presentation as the module category for some (possibly noncommutative) ring, but in fact this ring and the assignment from a group scheme to linear algebraic data can both be described explicitly.  This is the subject of \textit{Dieudonn\'e theory}, and we will give an overview of some of its main results, including two different presentations of the equivalence.\footnote{Emphasis on ``\emph{some of its results}''.  Dieudonn\'e theory is an enormous subject with many interesting results both internal and connected to arithmetic geometry and the theory of abelian varieties.  We will explore almost none of this.}
+Our goal in this Lecture is to give a compact presentation of formal groups based on the following observation: the category of commutative cocommutative Hopf algebras of finite type over a ground field \(k\) forms an abelian category.  It follows abstractly that this category admits a presentation as a full subcategory of the module category for some (possibly noncommutative) ring, but in fact this ring and the assignment from a group scheme to linear algebraic data can both be described explicitly.  This is the subject of \textit{Dieudonn\'e theory}, and we will give an overview of some of its main results, including two different presentations of the equivalence.\footnote{Emphasis on ``\emph{some of its results}''.  Dieudonn\'e theory is an enormous subject with many interesting results both internal and connected to arithmetic geometry and the theory of abelian varieties.  We will explore almost none of this.}
 
-In the first presentation, we follow notes by Weinstein~\cite[Lecture 1]{Weinstein}.  Begin with a \(1\)--dimensional formal group \(\G\) over a ring \(A\), and recall that we have previously been interested in the invariant differentials \(\omega_{\G} \subseteq \Omega^1_{\G/A}\) on \(\G\).  As explored in \Cref{RationalFGLsHaveLogarithms}, when \(A\) is a \(\Q\)--algebra such differentials give rise to logarithms through integration.  On the other hand, if \(A\) has positive characteristic \(p\) then there is a potential obstruction to integrating terms with exponents of the form \(-1 \pmod p\), and in \Cref{MfgII:LargeScales} we used this to lead us to the notion of \(p\)--height.  We now explore a third twist on this set-up, recalling that \(\Omega^1_{\G/A}\) forms the first level of the \index{de Rham complex}\textit{algebraic de Rham complex} \(\Omega^*_{\G/A}\).  The group operation and two projections
+In the first presentation, we follow notes by Weinstein~\cite[Lecture 1]{Weinstein}.  Begin with a \(1\)--dimensional formal group \(\G\) over a ring \(A\), and recall that we have previously been interested in the invariant differentials \(\omega_{\G} \subseteq \Omega^1_{\G/A}\) on \(\G\).  As explored in \Cref{RationalFGLsHaveLogarithms}, when \(A\) is a \(\Q\)--algebra such differentials give rise to logarithms through integration.  On the other hand, if \(A\) has positive characteristic \(p\) then there is a potential obstruction to integrating terms with exponents congruent to \(-1 \pmod p\), and in \Cref{MfgII:LargeScales} we used this to lead us to the notion of \(p\)--height.  We now explore a third twist on this set-up, recalling that \(\Omega^1_{\G/A}\) forms the first level of the \index{de Rham complex}\textit{algebraic de Rham complex} \(\Omega^*_{\G/A}\).  The group operation and two projections
 \begin{align*}
 \mu, \pi_1, \pi_2\co & \G \times \G \to \G \\
 \intertext{induce maps}
@@ -675,7 +675,7 @@ Write \(\omega = dg\) for \(g \in K\ps{x}\), and write \(f_2 = f_1 + p\Delta\). 
 \int \left( f_2^* \omega - f_1^* \omega \right) & = g(f_2) - g(f_1) = g(f_1 + p\Delta) - g(f_1) \\
 & = \sum_{n = 1}^\infty \frac{(p\Delta)^n}{n!} g^{(n)}(f_1).
 \end{align*}
-Since \(g' = \omega\) has coefficients in \(A\), so does the iterated derivative \(g^{(n)}\) for all \(n\), and hence the fraction \(p^n/n!\) lies in the \(\Z_{(p)}\)--algebra \(A\).
+Since \(g' = \omega\) has coefficients in \(A\), so does the iterated derivative \(g^{(n)}\) for all \(n\); the fraction \(p^n/n!\) lies in \(\Z_{(p)}\); and hence the entire sum lies in the \(\Z_{(p)}\)--algebra \(A\).
 \end{proof}
 
 \begin{corollary}[{\(H^1_{dR}\) is \index{crystal}``crystalline''}]\label{H1dRIsCrystalline}
@@ -705,7 +705,7 @@ Next, note that the module \(D^*(\G_0)\) carries some natural operations:
 With this, we come to the main theorem of this Lecture:
 
 \begin{theorem}[{\cite[Th\'eor\`eme 4.2]{GrothendieckCristaux}, \cite[Sections III.8--9]{Demazure}}]\label{MainContraDieudonneThm}
-The (de Rham--Dieudonn\'e) functor \(D^*\) determines a contravariant equivalence of categories between smooth \(1\)--dimensional formal groups \(\G_0\) over \(k\) of finite \(p\)--height and \index{Dieudonn\'e module}\textit{Dieudonn\'e modules}, which are modules \(M\) over the ring \[\Cart_p = \left. \W_p(k)\<F,V\> \middle/ \left( \begin{array}{c} FV = VF = p, \\ Fw = w^\phi F, \\ wV = Vw^\phi \end{array} \right) \right.\] which are additionally free and finite rank over \(\W_p(k)\). \qed
+For \(k\) a perfect field of characteristic \(p\), the (de Rham--Dieudonn\'e) functor \(D^*\) determines a contravariant equivalence of categories between smooth \(1\)--dimensional formal groups \(\G_0\) over \(k\) of finite \(p\)--height and \index{Dieudonn\'e module}\textit{Dieudonn\'e modules}, which are modules \(M\) over the ring \[\Cart_p = \left. \W_p(k)\<F,V\> \middle/ \left( \begin{array}{c} FV = VF = p, \\ Fw = w^\phi F, \\ wV = Vw^\phi \end{array} \right) \right.\] that are additionally free and finite rank over \(\W_p(k)\). \qed
 \end{theorem}
 
 \begin{remark}\label{InvariantsFromDModule}
@@ -717,11 +717,11 @@ Using \Cref{InvariantsFromDModule}, we see that the Dieudonn\'e module associate
 \end{example}
 
 \begin{example}
-We also give a kind of non-example: \(\G_a\) is \emph{not} a finite height formal group, and its Dieudonn\'e module is correspondingly strangely behaved: \[D^*(\G_a) = \F_p\ps{F}\{x\} / (V = 0).\]
+We also give a kind of non-example: \(\G_a\) is \emph{not} a finite height formal group, and its Dieudonn\'e module is correspondingly strangely behaved: \[D^*(\G_a) = k\ps{F}\{x\} / (V = 0).\]
 \end{example}
 
 \begin{example}[{cf.\ \Cref{Alpha2Example}}]\label{WorkedAlpha2Example}
-Dieudonn\'e theory admits an extension to finite group schemes over \(k\) as well, and the appropriate quotient of the Dieudonn\'e module of a formal group agrees with the Dieudonn\'e module associated to the appropriate subscheme: \[D^*(\G_0[p^j]) = D^*(\G_0) / p^j.\]  For example, this gives \[D^*(\G_m[p]) = \left.\F_p\{x\} \middle/\left(\begin{array}{c} Fx = 0, \\ Vx = x \end{array}\right)\right. .\]  We extract the subgroup scheme \(\alpha_2\) as the finite Dieudonn\'e quotient module \(D^*(\alpha_2) = \F_2\{x\} \leftarrow D^*(\G_a)\) of the Dieudonn\'e module associated to \(\G_a\) above.  We can now verify the four claims (all over \(\F_2\)) from \Cref{Alpha2Example}:
+Dieudonn\'e theory admits an extension to finite group schemes over \(k\) as well, and the appropriate quotient of the Dieudonn\'e module of a formal group agrees with the Dieudonn\'e module associated to the appropriate subscheme: \[D^*(\G_0[p^j]) = D^*(\G_0) / p^j.\]  For example, this gives \[D^*(\G_m[p]) = \left.k\{x\} \middle/\left(\begin{array}{c} Fx = 0, \\ Vx = x \end{array}\right)\right. .\]  Specializing to \(k = \F_2\), we extract the subgroup scheme \(\alpha_2\) as the finite Dieudonn\'e quotient module \(D^*(\alpha_2) = \F_2\{x\} \leftarrow D^*(\G_a)\) of the Dieudonn\'e module associated to \(\G_a\) above.  We can now verify the four claims from \Cref{Alpha2Example}:
 \begin{itemize}
 \item \textit{The group scheme \(\alpha_2\) has the same underlying structure ring as \(\mu_2 = \mathbb{G}_m[2]\) but is not isomorphic to it.}  There are now several ways to see this, the simplest of which is that the Verschiebung operator acts nontrivially on \(D^*(\mu_2)\) but wholly trivially on \(D^*(\alpha_2)\).\footnote{See also~\cite[Example 8.5]{StricklandFPFP}.}
 \item \textit{There is no commutative group scheme \(G\) of rank four such that \(\alpha_2 = G[2]\).}  Suppose that \(G\) were such a group scheme, so that \(D^*(G) / 2\) would give \(D^*(\alpha_2)\).  It can't be the case that \(D^*(G)\) has only \(2\)--torsion, since then this quotient would be a null operation, so it must be the case that \(D^*(G) = \Z/4\{x\}\).  The action of both \(F\) and \(V\) on \(x\) must vanish after quotienting by \(2\), so it must be the case that \(Fx = 2cx\) and \(Vx = 2dx\) for some constants \(c\) and \(d\)---but this violates \(VFx = 2x\).
@@ -768,11 +768,11 @@ In the case that the base ring is \(p\)--local, \(C\G\) splits as a sum of copie
 This construction also plays the role of a Dieudonn\'e functor:
 
 \begin{theorem}[{\cite[Theorem 3.5 and Theorem 3.28]{ZinkCartierTheory}}]\label{CurveDieudonneTheorem}
-The (Cartier--Dieudonn\'e) functor \(D_*\) determines a \emph{covariant} equivalence of categories between smooth \(1\)--dimensional formal groups over \(k\) of finite \(p\)--height and Dieudonn\'e modules. \qed
+For \(k\) a perfect field of characteristic \(p\), the (Cartier--Dieudonn\'e) functor \(D_*\) determines a \emph{covariant} equivalence of categories between smooth \(1\)--dimensional formal groups over \(k\) of finite \(p\)--height and Dieudonn\'e modules. \qed
 \end{theorem}
 
 \begin{theorem}[{\cite[Section II.15]{MazurMessing}}]\label{DieudonneDualityThm}\footnote{This is a remarkbly difficult theorem to prove, cf.\ \Cref{OpenQuestionsSection}.}
-There is a natural isomorphism \[(D_* \G_0)^* \cong D^* \G_0. \pushQED\qed\qedhere\popQED\]
+There is a natural isomorphism \[(D_* \G_0)^* \cong D^* \G_0,\] where \(F\) and \(V\) interchange rules through the linear dual. \pushQED\qed\qedhere\popQED
 \end{theorem}
 
 \begin{remark}[{\cite[Chapitre VI]{GrothendieckCristaux}}]
@@ -787,15 +787,15 @@ Dieudonn\'e theory gives rise to an important function called the \idxentry{peri
 \end{align*}
 This map has incredibly good properties.  It is equivariant for the action of \(\Aut \G_0\)~\cite[Theorem 1]{HopkinsGrossAnnouncement}, and with enough work one can use this to extract explicit (recursive) formulas expressing the action~\cite{DevinatzHopkins}, \cite[Section 24]{StricklandFPFP}, \cite[Section 22]{HopkinsGrossEquivVBs}, bringing some relief to the problem of \Cref{StablizerRepIsComplicated}.  Also, in a suitable context it becomes an \'etale morphism with identifiable fibers~\cite[Theorem 1]{HopkinsGrossAnnouncement}, \cite[Sections 23-4]{HopkinsGrossEquivVBs}, which allows one to give an explicit formula for the dualizing sheaf~\cite[Corollary 3]{HopkinsGrossAnnouncement} with direct applications to topology~\cite[Theorem 6]{HopkinsGrossAnnouncement}: \[\context{E_\Gamma}(\Susp^{-d^2 - d} \mathbb I_{\Q/\Z}) = \Omega^{d - 1}_{(\moduli{fg})^\wedge_\Gamma} = \omega^{\otimes d}[\det],\] where the \index{Brown--Comenetz dual}\textit{Brown--Comenetz dualizing object} \(\mathbb I_{\Q/\Z}\) is defined by the property \[\mathbb I_{\Q/\Z}^0(E) = \CatOf{AbelianGroups}(\pi_0 E, \Q/\Z).\]
 
-In \Cref{PeriodMapFigure} we sketch the period map at \(n = 2\) and \(p = 2\), which has the following list of properties~\cite[Appendix 25]{HopkinsGrossEquivVBs}, \cite{Yu}:
+In \Cref{PeriodMapFigure} we sketch the period map for the values \(p = 2\), \(d = 2\), \(\sheaf O_A = \W_p(\F_{p^d})\), and \(\Gamma = \Gamma_2\) the Honda formal group.  This map has the following list of properties~\cite[Appendix 25]{HopkinsGrossEquivVBs}, \cite{Yu}:
 \begin{itemize}
-\item The center of the \(\Z_{p^2}\)--points of Lubin--Tate space corresponds to the canonical lift, which is the formal group that further acquires an \(\mathcal O_A\)--module structure~\cite{LubinTateOther}.  It has \(\pi\)--series \([\pi](x) = \pi x + x^{p^2}\).
+\item The center of the \(\W(\F_{p^2})\)--points of Lubin--Tate space corresponds to the canonical lift, which is the formal group that further acquires an \(\mathcal O_A\)--module structure~\cite{LubinTateOther}.  It has \(2\)--series \([2](x) = 2 x + x^{p^2}\).
 \item There are three nontrivial points in \(\G[2]\): \(\alpha\), \(\beta\), and \(\alpha + \beta\).  Quotienting by them gives three points at order \(1/(p+1)\), the first bunch of \index{Lubin Tate stack@Lubin--Tate stack!canonical lift!quasicanonical}\textit{quasicanonical lifts}, which have partial formal \(\mathcal O_A\)--module structures~\cite{Gross}.
 \item At each quasicanonical point, you can form three quotients: two of them make the situation ``worse'' (i.e., raise the order of the quasicanonical point), and one of them makes the situation ``better'' (i.e., lowers the order), which is a kind of witness to the identification \(\G / \G[2] \cong \G\).
 \item The map \(\pi_{GH}\) sends the canonical lift to \(0 = [1:0]\).  The first-order quasicanonical points are targets of isogenies of degree \(p\) from the canonical point which reduce to the Frobenius isogeny on the special fiber.  The Frobenius isogeny can be shown to act by \(F_{\mathrm{can}} = \left[ \begin{array}{cc} 0 & p \\ 1 & 0 \end{array} \right]\) on \(\mathbb P^1\), and hence the first-order quasicanonical points are sent to \(\infty = [0:1]\) under \(\pi_{\mathrm{GH}}\).  This pattern continues: the second-order quasicanonical points are sent to \(0\), and so on.
 \item Out to order \(1/p\), \(\pi_{\mathrm{GH}}\) is injective.
-\item The group \(\F_{2^2}^\times \le \Aut \G\) acts by rotation on \(\mathbb P^1\).
-\item These quasicanonical points are the ones with nontrivial stabilizers under the action by the Morava stabilizer group---all the other points belong to free orbits.  The canonical lift has the largest stabilizer of all.
+\item The group \(\F_{p^2}^\times \le \Aut \G\) acts by rotation on \(\mathbb P^1\).
+\item These quasicanonical points are the ones with nontrivial stabilizers under the action by \(\Aut \Gamma_d\)---all the other points belong to free orbits.  The canonical lift has the largest stabilizer of all.
 \end{itemize}
 \end{remark}
 
@@ -947,7 +947,7 @@ then \(H(n) = \F_p[x_0, x_1, \ldots, x_k]\) with the Witt vector diagonal, i.e.,
 The category \(\CatOf{GradedHopfAlgs}^{> 0, \fin}_{\F_p/}\) of finite-type graded connected Hopf \(\F_p\)--algebras is a full subcategory of modules over \[\bigoplus_{n, m} \CatOf{GradedHopfAlgs}(H(n), H(m)).\]
 \end{corollary}
 \begin{proof}[Proof sketch]
-This is a general nonsense consequence of having found a set of projective generators.  The functor presenting the inclusion is \[M \mapsto \bigoplus_{n=0}^\infty \CatOf{GradedHopfAlgs}(H(n), M),\] and since this functor is corepresented its automorphisms are encoded by the indicated ring.
+This is a general nonsense consequence of having found a set of projective generators.  The functor presenting the inclusion is \[M \mapsto \bigoplus_{n=0}^\infty \CatOf{GradedHopfAlgs}(H(n), M),\] and since this functor is corepresented its endomorphisms are encoded by the indicated ring.
 \end{proof}
 
 We would also like to give a set of conditions, analogous to the technical conditions appearing in the previous two presentations, which select this full subcategory out from all possible modules over this endomorphism ring.
@@ -994,7 +994,7 @@ D_n H_* \Loops^\infty X \to D_n H_* \Loops^\infty Y \to D_n H_* \Loops^\infty Z.
 \noindent This Theorem is not especially easy to prove: one works very directly with unstable modules over the Steenrod algebra, the bar spectral sequence, and Postnikov decomposition of infinite loopspaces.  We refer the reader to the paper directly, as we have been unable to find a useful improvement upon or even summary of the results presented there.  Nonetheless, granting this Theorem, we use Brown representability to draw the following consequence:
 
 \begin{corollary}[{\cite[Theorem 2.1, Remark 2.9]{GLM}}]\label{BrownGitlerSpectraDefn}
-For \(n > 1\) an integer satisfying \(n \not\equiv \pm 1 \pmod{2p}\),\footnote{As convention, when \(n \equiv \pm 1 \pmod{2p}\) we set \(B(n) := B(n-1)\), and \(B(0) := \S^0\).} the \index{Brown--Gitler spectrum}\textit{Brown--Gitler spectrum} \(B(n)\) is defined to be the spectrum satisfying \[\pushQED{\qed}B(n)_n X \cong D_n H_* \Loops^\infty X. \qedhere\popQED\]
+For \(n > 1\) an integer satisfying \(n \not\equiv \pm 1 \pmod{2p}\),\footnote{As convention, when \(n \equiv \pm 1 \pmod{2p}\) we set \(B(n) := B(n-1)\), and \(B(0) := \S^0\).} there exists a spectrum \(B(n)\), called the \(n\){\th} \index{Brown--Gitler spectrum}\textit{Brown--Gitler spectrum}, which satisfies \[\pushQED{\qed}B(n)_n X \cong D_n H_* \Loops^\infty X. \qedhere\popQED\]
 \end{corollary}
 
 
@@ -1162,7 +1162,7 @@ We use this to continue the analysis of the case \(q = 1\) and \(j = \infty\), w
 There is a lot of structure visible in this collection of spectral sequences, as considered simultaneously.  Without further inspection, the spectral sequence at \(j = \infty\) records that \(\CP^\infty_K\) is a formal variety, and the spectral sequences at the finite values \(1 \le j < \infty\) encode in their differentials the behavior of the map \(p^j\co \Gamma \to \Gamma\) on functions---indeed, this appears to be the entire job of \(\alpha'_{()}\).  Lastly, we notice that the \(E_\infty\) page of each finite-range spectral sequence includes into the spectral sequence at \(j = \infty\), and moreover this filtration is exhaustive: every term in the \(j = \infty\) spectral sequence appears at some \(j < \infty\) stage.  Since this last property is about the \(E_\infty\) pages, it is really a property of the formal group \(\Gamma\), which we record in a definition:
 
 \begin{definition}[{\cite[Definition 4.1]{GrothendieckCristaux}}]\label{DefnPDivGp}
-A \index{p divisible group@\(p\)--divisible group}\textit{\(p\)--divisible group}\footnote{Some like to call these \index{Barsotti--Tate group|see {\(p\)--divisible group}}\textit{Barsotti--Tate groups}, which is probably the better name, since ``\(p\)--divisible group'' does not communicate these subtle extra properties.} over a field \(k\) is a system \(\mathbb G_j\) of finite group schemes and inclusions \(i_k^j\co \mathbb G_k \to \mathbb G_j\) for \(k < j\) which model the inclusions \(\mathbb G_j[p^k] \subseteq \mathbb G_j\).
+A \index{p divisible group@\(p\)--divisible group}\textit{\(p\)--divisible group}\footnote{Some like to call these \index{Barsotti--Tate group|see {\(p\)--divisible group}}\textit{Barsotti--Tate groups}, which is probably the better name, since ``\(p\)--divisible group'' does not communicate these subtle extra properties.} of height \(d\) over a field is a system \(\mathbb G_j\) of finite group schemes satisfying \(\operatorname{dim} \sheaf O(\mathbb G_j) = p^{jd}\), as well as maps \(i_k^j\co \mathbb G_k \to \mathbb G_j\) for \(k < j\) which belong to exact sequences \[0 \to \mathbb G_k \xrightarrow{i_k^j} \mathbb G_j \xrightarrow{p^k} \mathbb G_j.\]
 \end{definition}
 
 \begin{definition}
