--- a/sigma.tex
+++ b/sigma.tex
@@ -527,7 +527,7 @@ Thus far, we have constructed the solid maps in the following commutative diagra
 C^2(\CP^\infty_E; \Gm) \arrow["\delta"]{r} & C^3(\CP^\infty_E; \Gm) \arrow[densely dotted, "e"]{r} & \InternalHom{FormalGroups}((\CP^\infty_E)^{\wedge 2}, \G_m),
 \end{tikzcd}
 \end{center}
-where \(\G^{\sm n}\) denotes the \index{p divisible group@\(p\)--divisible group!alternating power}exterior \(n\){\th} power of \(\G\), the left-most vertical map is an isomorphism by \Cref{CharacterizationOfBSUUpperE}, and right-most vertical map is an isomorphism by \Cref{EThyOfEMSpaces}.  We would like to promote this diagram to an isomorphism of short exact sequences, and to do so we need to finish constructing the sequences themselves---we need a horizontal map \(e\) making the diagram commute.
+where \(\G^{\sm n}\) denotes the \index{p divisible group@\(p\)--divisible group!alternating power}exterior \(n\){\th} power of \(\G\), the left-most vertical map is an isomorphism by \Cref{CharacterizationOfBSUUpperE}, and right-most vertical map is an isomorphism by combining \Cref{EThyOfEMSpaces} with \Cref{DieudonneModsForPDivVsFormal} and \Cref{TopologicalCartierDuality}.  We would like to promote this diagram to an isomorphism of short exact sequences, and to do so we need to finish constructing the sequences themselves---we need a horizontal map \(e\) making the diagram commute.
 
 The idea behind the construction of \(e\) is to pretend that \(\widehat \Pi_3\) is an isomorphism, so that we could completely detect \(e\) by comparing the image of the identity point on \(\Spec E_0 BU[6, \infty)\) through \(\widehat \Pi_3\) to the image of the same identity point through the maps \[\Spec E_0 BU[6, \infty) \to \Spec E_0 \OS{H\Z}{3} \to \CatOf{FormalGroups}((\CP^\infty_E)^{\sm 2}, \Gm).\]  Using our calculation that \((\CP^\infty_E)^{\sm 2}\) is a \index{p divisible group@\(p\)--divisible group}\(p\)--divisible group, we see that we can further restrict attention to the torsion subgroups \[(\CP^\infty_E)^{\sm 2}[p^j] = (BS^1[p^j]_E)^{\sm 2}\] which filter it, corresponding to analyzing the bundle classified by the restriction \[BS^1[p^j]^{\sm 2} \xrightarrow{\mu} \OS{HS^1[p^j]}{2} \xrightarrow{\beta_j} \OS{H\Z}{3} \xrightarrow{\gamma} \OS{kU}{6}.\]  Using the abbreviation \(B_j = BS^1[p^j]\), our summary goal is to find an express description of a map \(d\) making the following square commute:
 \begin{center}
@@ -721,7 +721,12 @@ C^2(\G_a; \Gm) \arrow{r} & C^3(\G_a; \Gm) \arrow{r} & \InternalHom{FormalGroups}
 \end{center}
 Our task, as then, is to discern as much about these nodes as possible, as well as any exactness properties of the two sequences.\footnote{The quotes indicate that the right-hand topological node does not even make sense: \(H_* \OS{H\Z}{3}\) is not even-concentrated, and we do not understand the algebraic geometry of spaces whose homology is not even-concentrated.  This is quite troubling---but we will press on for now.}
 
-We begin with the topological sequence.  The Serre spectral sequence \[E_2^{*, *} = H^* B\SU \otimes H^* \OS{H\Z}{3} \Rightarrow H^* BU[6, \infty)\] gives us easy access to the middle node, and we will recount the case of \(p = 2\) in detail.  In this case, the spectral sequence has \(E_2\)--page \[E_2^{*, *} = \HFtwo^* B\SU \otimes \HFtwo^* \OS{H\Z}{3} \cong \F_2[c_2, c_3, \ldots] \otimes \F_2\left[\Sq^I \iota_3 \middle| \begin{array}{c} I_j \ge 2I_{j+1}, \\ 2 I_1 - I_+ > 1 \end{array}\right].\]  Because the target is \(6\)--connective, we must have the transgressive differential \(d_4 \iota_3 = c_2\), which via the Kudo transgression theorem spurs the much larger family of differentials \[d_{4+I_+} \Sq^I \iota_3 = \Sq^I c_2.\]  This necessitates understanding the action of the Steenrod operations on the cohomology of \(B\SU\), which is due to \index{Wu formulas}Wu~\cite[Section 23.6]{MayConciseCourse}:\footnote{The reader might enjoy reviewing some of the formulas from \Cref{PiStarMOSection} and proving their \(BU\)-- and \(BSU\)--analogues, which entail this one.} \[\Sq^{2^j} \cdots \Sq^4 \Sq^2 c_2 \equiv c_{1 + 2^j} \pmod{\text{decomposables}}.\]  Accounting for the squares of classes left behind, this culminates in the following calculation:
+We begin with the topological sequence.  The Serre spectral sequence \[E_2^{*, *} = H^* B\SU \otimes H^* \OS{H\Z}{3} \Rightarrow H^* BU[6, \infty)\] gives us easy access to the middle node, and we will recount the case of \(p = 2\) in detail.  In this case, the spectral sequence has \(E_2\)--page
+\begin{align*}
+E_2^{*, *} & = \HFtwo^* B\SU \otimes \HFtwo^* \OS{H\Z}{3} \\
+& \cong \F_2[c_2, c_3, \ldots] \otimes \F_2\left[\Sq^{2^n} \Sq^{2^{n-1}} \cdots \Sq^2 \iota_3 \mid n \ge 1 \right].
+\end{align*}
+Because the target is \(6\)--connective, we must have the differential \(d_4 \iota_3 = c_2\), which via the Kudo transgression theorem spurs the family of differentials \[d_{4+I_+} \Sq^I \iota_3 = \Sq^I c_2.\]  This necessitates understanding the action of the Steenrod operations on the cohomology of \(B\SU\), which is due to \index{Wu formulas}Wu~\cite[Section 23.6]{MayConciseCourse}:\footnote{The reader might enjoy reviewing some of the formulas from \Cref{PiStarMOSection} and proving their \(BU\)-- and \(BSU\)--analogues, which entail this one.} \[\Sq^{2^j} \cdots \Sq^4 \Sq^2 c_2 \equiv c_{1 + 2^j} \pmod{\text{decomposables}}.\]  Accounting for the squares of classes left behind, this culminates in the following calculation:
 
 \begin{theorem}\label{HF2BU6Calculation}
 There is an isomorphism \[\HFtwo^* BU[6, \infty) \cong \frac{\HFtwo^* BU}{(c_j \mid j \ne 2^k + 1, j \ge 3)} \otimes \F_2[\iota_3^2, (\Sq^2 \iota_3)^2, \ldots].\]
