add citation to 2.3.18, calm proof of 2.3.19 down

--- a/quillen.tex
+++ b/quillen.tex
@@ -579,8 +579,8 @@ and \Cref{ProductMapOfDivisorSchemes}.
 \end{proof}
 
 Finally, we can connect our analysis of the divisors coming from topological vector bundles with the line bundles studied at the start of the section.
-\begin{lemma}[{\cite[Section 19]{StricklandFPFP}}]
-Let \(\zeta: X_E \to X_E \times \CP^\infty_E\) denote the pointing of the formal curve \(\CP^\infty_E\), and let \(\sheaf I(\P(V)_E)\) denote the \index{sheaf!ideal}ideal sheaf on \(X_E \times \CP^\infty_E\) associated to the divisor subscheme \(\P(V)_E\).  There is a natural isomorphism of sheaves over \(X_E\): \[\zeta^* \sheaf I(\P(V)_E) \cong \ThomSheaf{V}.\]
+\begin{lemma}[{\cite[Section 19]{StricklandFPFP}, \cite[Definition 8.33]{StricklandFSFG}}]
+Let \(\sheaf I(\P(V)_E)\) denote the \index{sheaf!ideal}ideal sheaf on \(X_E \times \CP^\infty_E\) associated to the divisor subscheme \(\P(V)_E\), and let \(\zeta: X_E \to X_E \times \CP^\infty_E\) denote the pointing of the formal curve \(\CP^\infty_E\).  There is a natural isomorphism of sheaves over \(X_E\): \[\zeta^* \sheaf I(\P(V)_E) \cong \ThomSheaf{V}.\]
 \end{lemma}
 \begin{proof}[Proof sketch]
 As employed in \Cref{Pi2AndInvariantDiffls}, a model for $\zeta^* \sheaf I(D)$ is \[\zeta^* \sheaf I(D) = \sheaf I(D) / \sheaf I(D \sqcup 0).\]  The Thom space also has such a model: there is a cofiber sequence \[\P(V) \to \P(V \oplus \mathrm{triv}) \to T(V).\]  Applying $E$--cohomology yields the result.
@@ -589,7 +589,7 @@ As employed in \Cref{Pi2AndInvariantDiffls}, a model for $\zeta^* \sheaf I(D)$ i
 \begin{theorem}[{cf.\ \Cref{BUZTriumvirate}}]\label{ComplexOrientationsInTermsOfTrivs}
 A trivialization \(t\co \ThomSheaf{\L} \cong \sheaf O_{\CP^\infty_E}\) of the Thom sheaf associated to the canonical bundle induces an \index{orientation}orientation \(MUP \to E\).
 \end{theorem}
-\begin{proof}
+\begin{proof}[Proof sketch]
 Suppose that \(V\) is a rank \(n\) vector bundle over \(X\), and let \(f\co Y \to X\) be the space guaranteed by the splitting principle to provide an isomorphism \(f^* V \cong \bigoplus_{j=1}^n \L_j\).  The chosen trivialization \(t\) then pulls back to give a trivialization of \(\sheaf I(\P(f^* V)_E)\), and by finite flatness this descends to also give a trivialization of \(\sheaf I(\P(V)_E)\).  Pulling back along the zero section gives a trivialization of \(\ThomSheaf{V}\).  Then note that the system of trivializations produced this way is multiplicative, as a consequence of \(\P(V_1 \oplus V_2)_E \cong \P(V_1)_E \sqcup \P(V_2)_E\).  In the universal examples, this gives a sequence of compatible maps \(MU(n) \to E\) which assemble on the colimit \(n \to \infty\) to give the desired map of ring spectra.
 \end{proof}
 
