--- a/mo.tex
+++ b/mo.tex
@@ -389,7 +389,7 @@ We are now in a position to uncover the desired map \(\alpha^*\) from earlier.  
 \begin{align*}
 H\F_2P^0 X & \from \mathcal AP^0 \otimes H\F_2P^0 X \\
 \intertext{gives a coaction map as before and hence an action map}
-\Spec \mathcal AP_0 \otimes X_{H\F_2P} & \to X_{H\F_2P}
+\Spec \mathcal AP_0 \times X_{H\F_2P} & \to X_{H\F_2P}
 \end{align*}
 
 \begin{lemma}[{\cite[Formula 3.4, Remark 3.14]{GoerssQCohOnMfg}}]
