--- a/main.bib
+++ b/main.bib
@@ -4216,6 +4216,20 @@ MRREVIEWER = {Mark Hovey},
   MRNUMBER = {2223406},
 }
 
+@ARTICLE{Walker,
+   author = {{Walker}, B.~J.},
+    title = "{Orientations and p-Adic Analysis}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {0905.0022},
+ primaryClass = "math.AT",
+ keywords = {Mathematics - Algebraic Topology, Mathematics - Number Theory, 55P43, 55N22, 14L05},
+     year = 2009,
+    month = apr,
+   adsurl = {http://adsabs.harvard.edu/abs/2009arXiv0905.0022W},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @phdthesis{Wang,
   title={Unstable chromatic homotopy theory},
   author={Wang, Guozhen},
